--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -33,13 +33,14 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA9
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_SYS_VS_DBSignals
-Mcu.Pin17=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_SYS_VS_DBSignals
+Mcu.Pin18=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -48,7 +49,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
@@ -70,6 +71,10 @@ PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=AudioIn
 PA0.Locked=true
 PA0.Signal=SharedAnalog_PA0
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=SampleFreqOutClk
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
 PA13.Locked=true
