--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -1,7 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.CommonPathInternal=null|null|null|null
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T6_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ClockPrescaler,DMAContinuousRequests,ExternalTrigConv,CommonPathInternal
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -11,8 +15,45 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_Trigger2_OUT1-DAC_OUT1=DAC_TRIGGER_NONE
-DAC1.DAC_Trigger_OUT1-DAC_OUT1=DAC_TRIGGER_NONE
+DAC1.DAC_Trigger_OUT1-DAC_OUT1=DAC_TRIGGER_T6_TRGO
 DAC1.IPParameters=DAC_Trigger_OUT1-DAC_OUT1,DAC_Trigger2_OUT1-DAC_OUT1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.EventEnable=DISABLE
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC1.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.ADC1.0.RequestNumber=1
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC1.0.SignalID=NONE
+Dma.ADC1.0.SyncEnable=DISABLE
+Dma.ADC1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC1.0.SyncRequestNumber=1
+Dma.ADC1.0.SyncSignalID=NONE
+Dma.DAC1_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC1_CH1.1.EventEnable=DISABLE
+Dma.DAC1_CH1.1.Instance=DMA1_Channel2
+Dma.DAC1_CH1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DAC1_CH1.1.MemInc=DMA_MINC_ENABLE
+Dma.DAC1_CH1.1.Mode=DMA_CIRCULAR
+Dma.DAC1_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC1_CH1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC1_CH1.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DAC1_CH1.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.DAC1_CH1.1.RequestNumber=1
+Dma.DAC1_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.DAC1_CH1.1.SignalID=NONE
+Dma.DAC1_CH1.1.SyncEnable=DISABLE
+Dma.DAC1_CH1.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.DAC1_CH1.1.SyncRequestNumber=1
+Dma.DAC1_CH1.1.SyncSignalID=NONE
+Dma.Request0=ADC1
+Dma.Request1=DAC1_CH1
+Dma.RequestsNb=2
 File.Version=6
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
@@ -22,12 +63,13 @@ Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=DAC1
-Mcu.IP2=LPUART1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM16
-Mcu.IPNb=7
+Mcu.IP2=DMA
+Mcu.IP3=LPUART1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IPNb=8
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -40,7 +82,7 @@ Mcu.Pin14=PB3
 Mcu.Pin15=PB4
 Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin17=VP_SYS_VS_DBSignals
-Mcu.Pin18=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -56,6 +98,8 @@ Mcu.UserName=STM32G431RBTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -65,7 +109,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=AudioIn
@@ -158,7 +202,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM16_Init-TIM16-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -211,16 +255,15 @@ SH.GPXTI13.ConfNb=1
 SH.SharedAnalog_PA0.0=GPIO_Analog
 SH.SharedAnalog_PA0.1=ADC1_IN1,IN1-Single-Ended
 SH.SharedAnalog_PA0.ConfNb=2
-TIM16.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM16.IPParameters=AutoReloadPreload,Prescaler,PeriodNoDither
-TIM16.PeriodNoDither=3864
-TIM16.Prescaler=1
+TIM6.IPParameters=PeriodNoDither,TIM_MasterOutputTrigger
+TIM6.PeriodNoDither=3864
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-G431RB
 boardIOC=true
 isbadioc=false
