--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -57,6 +57,18 @@ Dma.RequestsNb=2
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x30A0A7FB
+I2S2.ErrorAudioFreq=- %
+I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S2.Instance=SPI$Index
+I2S2.RealAudioFreq=- Hz
+I2S2.VirtualMode=I2S_MODE_MASTER
+I2S3.ErrorAudioFreq=- %
+I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S3.Instance=SPI$Index
+I2S3.RealAudioFreq=- Hz
+I2S3.VirtualMode=I2S_MODE_SLAVE
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate,WordLength
@@ -65,28 +77,36 @@ Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=DAC1
+Mcu.IP10=TIM6
 Mcu.IP2=DMA
 Mcu.IP3=I2C1
-Mcu.IP4=LPUART1
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM6
-Mcu.IPNb=9
+Mcu.IP4=I2S2
+Mcu.IP5=I2S3
+Mcu.IP6=LPUART1
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB8-BOOT0
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_SYS_VS_DBSignals
-Mcu.Pin18=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB15
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PA15
+Mcu.Pin18=PC10
+Mcu.Pin19=PC12
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB8-BOOT0
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin24=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -94,7 +114,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=19
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
@@ -131,6 +151,8 @@ PA14.GPIO_Label=T_SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Mode=Half_Duplex_Slave
+PA15.Signal=I2S3_WS
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=LPUART1_TX [STLINKV3E_VCP_RX]
 PA2.Locked=true
@@ -151,12 +173,22 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=KnipperLedje
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB12.Mode=Half_Duplex_Master
+PB12.Signal=I2S2_WS
+PB13.Mode=Half_Duplex_Master
+PB13.Signal=I2S2_CK
+PB15.Mode=Half_Duplex_Master
+PB15.Signal=I2S2_SD
 PB8-BOOT0.Locked=true
 PB8-BOOT0.Mode=I2C
 PB8-BOOT0.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC10.Mode=Half_Duplex_Slave
+PC10.Signal=I2S3_CK
+PC12.Mode=Half_Duplex_Slave
+PC12.Signal=I2S3_SD
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 [blue push button]
 PC13.Locked=true
@@ -268,4 +300,4 @@ VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-G431RB
 boardIOC=true
-isbadioc=false
+isbadioc=true
