--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -57,17 +57,24 @@ Dma.RequestsNb=2
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x30A0A7FB
-I2S2.ErrorAudioFreq=- %
+I2S2.AudioFreq=I2S_AUDIOFREQ_44K
+I2S2.CPOL=I2S_CPOL_LOW
+I2S2.DataFormat=I2S_DATAFORMAT_24B
+I2S2.ErrorAudioFreq=0.61 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,CPOL
 I2S2.Instance=SPI$Index
-I2S2.RealAudioFreq=- Hz
+I2S2.RealAudioFreq=44.27 KHz
 I2S2.VirtualMode=I2S_MODE_MASTER
-I2S3.ErrorAudioFreq=- %
+I2S3.AudioFreq=I2S_AUDIOFREQ_44K
+I2S3.CPOL=I2S_CPOL_LOW
+I2S3.DataFormat=I2S_DATAFORMAT_24B
+I2S3.ErrorAudioFreq=0.61 %
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq
+I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode,AudioFreq,CPOL,DataFormat
 I2S3.Instance=SPI$Index
-I2S3.RealAudioFreq=- Hz
+I2S3.Mode=I2S_MODE_SLAVE_RX
+I2S3.RealAudioFreq=44.27 KHz
 I2S3.VirtualMode=I2S_MODE_SLAVE
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
@@ -236,7 +243,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_I2S2_Init-I2S2-false-HAL-true,10-MX_I2S3_Init-I2S3-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -300,4 +307,4 @@ VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-G431RB
 boardIOC=true
-isbadioc=true
+isbadioc=false
