--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -55,7 +55,9 @@ Dma.Request0=ADC1
 Dma.Request1=DAC1_CH1
 Dma.RequestsNb=2
 File.Version=6
-I2C1.IPParameters=Timing
+I2C1.I2C_Fall_Time=0
+I2C1.I2C_Rise_Time=0
+I2C1.IPParameters=Timing,I2C_Rise_Time,I2C_Fall_Time
 I2C1.Timing=0x30A0A7FB
 I2S2.AudioFreq=I2S_AUDIOFREQ_44K
 I2S2.CPOL=I2S_CPOL_LOW
