--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -100,22 +100,25 @@ Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PB15
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PA15
-Mcu.Pin18=PC10
-Mcu.Pin19=PC12
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB15
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB8-BOOT0
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_SYS_VS_DBSignals
-Mcu.Pin24=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=PA15
+Mcu.Pin21=PC10
+Mcu.Pin22=PC12
+Mcu.Pin23=PB8-BOOT0
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_SYS_VS_DBSignals
+Mcu.Pin27=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -123,7 +126,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=25
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
@@ -182,12 +185,24 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=KnipperLedje
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=ShiftRegClk
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=ShiftRegData
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB12.Mode=Half_Duplex_Master
 PB12.Signal=I2S2_WS
 PB13.Mode=Half_Duplex_Master
 PB13.Signal=I2S2_CK
 PB15.Mode=Half_Duplex_Master
 PB15.Signal=I2S2_SD
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=ShiftRegEn
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB8-BOOT0.Locked=true
 PB8-BOOT0.Mode=I2C
 PB8-BOOT0.Signal=I2C1_SCL
