--- a/SEAG_F/SEAG_F.ioc
+++ b/SEAG_F/SEAG_F.ioc
@@ -189,18 +189,21 @@ PC3.Locked=true
 PC3.Signal=GPIO_Output
 PC4.Mode=Master_Clock_Activated
 PC4.Signal=I2S1_MCK
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC6.GPIO_Label=RotEncoderInA
+PC6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC6.Locked=true
-PC6.Signal=GPIO_Input
-PC7.GPIOParameters=GPIO_Label
+PC6.Signal=GPXTI6
+PC7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC7.GPIO_Label=RotEncoderInB
+PC7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC7.Locked=true
-PC7.Signal=GPIO_Input
-PC8.GPIOParameters=GPIO_Label
+PC7.Signal=GPXTI7
+PC8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC8.GPIO_Label=RotEncoderButton
+PC8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC8.Locked=true
-PC8.Signal=GPIO_Input
+PC8.Signal=GPXTI8
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -287,6 +290,12 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=192000000
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
