--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -64,8 +64,9 @@ I2S2.CPOL=I2S_CPOL_LOW
 I2S2.DataFormat=I2S_DATAFORMAT_24B
 I2S2.ErrorAudioFreq=0.61 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,CPOL
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,CPOL,Mode
 I2S2.Instance=SPI$Index
+I2S2.Mode=I2S_MODE_MASTER_RX
 I2S2.RealAudioFreq=44.27 KHz
 I2S2.VirtualMode=I2S_MODE_MASTER
 I2S3.AudioFreq=I2S_AUDIOFREQ_44K
@@ -75,7 +76,7 @@ I2S3.ErrorAudioFreq=0.61 %
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode,AudioFreq,CPOL,DataFormat
 I2S3.Instance=SPI$Index
-I2S3.Mode=I2S_MODE_SLAVE_RX
+I2S3.Mode=I2S_MODE_SLAVE_TX
 I2S3.RealAudioFreq=44.27 KHz
 I2S3.VirtualMode=I2S_MODE_SLAVE
 KeepUserPlacement=false
