--- a/CubeIDEProject/SEAG.ioc
+++ b/CubeIDEProject/SEAG.ioc
@@ -2,60 +2,31 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=SPI2_RX
-Dma.Request1=SPI3_TX
-Dma.RequestsNb=2
-Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.0.EventEnable=DISABLE
-Dma.SPI2_RX.0.Instance=DMA1_Channel3
-Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.0.Mode=DMA_CIRCULAR
-Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI2_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI2_RX.0.RequestNumber=1
-Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI2_RX.0.SignalID=NONE
-Dma.SPI2_RX.0.SyncEnable=DISABLE
-Dma.SPI2_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI2_RX.0.SyncRequestNumber=1
-Dma.SPI2_RX.0.SyncSignalID=NONE
-Dma.SPI3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI3_TX.1.EventEnable=DISABLE
-Dma.SPI3_TX.1.Instance=DMA1_Channel4
-Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_TX.1.Mode=DMA_CIRCULAR
-Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI3_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI3_TX.1.RequestNumber=1
-Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI3_TX.1.SignalID=NONE
-Dma.SPI3_TX.1.SyncEnable=DISABLE
-Dma.SPI3_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI3_TX.1.SyncRequestNumber=1
-Dma.SPI3_TX.1.SyncSignalID=NONE
+Dma.Request0=SPI3_RX
+Dma.RequestsNb=1
+Dma.SPI3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI3_RX.0.EventEnable=DISABLE
+Dma.SPI3_RX.0.Instance=DMA1_Channel1
+Dma.SPI3_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SPI3_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_RX.0.Mode=DMA_CIRCULAR
+Dma.SPI3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SPI3_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI3_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI3_RX.0.RequestNumber=1
+Dma.SPI3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI3_RX.0.SignalID=NONE
+Dma.SPI3_RX.0.SyncEnable=DISABLE
+Dma.SPI3_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI3_RX.0.SyncRequestNumber=1
+Dma.SPI3_RX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Fall_Time=0
 I2C1.I2C_Rise_Time=0
 I2C1.IPParameters=Timing,I2C_Rise_Time,I2C_Fall_Time
 I2C1.Timing=0x30A0A7FB
-I2S2.AudioFreq=I2S_AUDIOFREQ_44K
-I2S2.CPOL=I2S_CPOL_LOW
-I2S2.DataFormat=I2S_DATAFORMAT_24B
-I2S2.ErrorAudioFreq=0.61 %
-I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,CPOL,Mode,Standard
-I2S2.Instance=SPI$Index
-I2S2.Mode=I2S_MODE_MASTER_RX
-I2S2.RealAudioFreq=44.27 KHz
-I2S2.Standard=I2S_STANDARD_PHILIPS
-I2S2.VirtualMode=I2S_MODE_MASTER
 I2S3.AudioFreq=I2S_AUDIOFREQ_44K
 I2S3.CPOL=I2S_CPOL_LOW
 I2S3.DataFormat=I2S_DATAFORMAT_24B
@@ -63,9 +34,9 @@ I2S3.ErrorAudioFreq=0.61 %
 I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
 I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode,AudioFreq,CPOL,DataFormat
 I2S3.Instance=SPI$Index
-I2S3.Mode=I2S_MODE_SLAVE_TX
+I2S3.Mode=I2S_MODE_MASTER_RX
 I2S3.RealAudioFreq=44.27 KHz
-I2S3.VirtualMode=I2S_MODE_SLAVE
+I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate,WordLength
@@ -74,35 +45,31 @@ Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
-Mcu.IP2=I2S2
-Mcu.IP3=I2S3
-Mcu.IP4=LPUART1
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TIM6
-Mcu.IPNb=9
+Mcu.IP2=I2S3
+Mcu.IP3=LPUART1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IPNb=8
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB2
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin13=PB15
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PA15
-Mcu.Pin19=PC10
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PC10
+Mcu.Pin17=PC12
+Mcu.Pin18=PB8-BOOT0
+Mcu.Pin19=PB9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PC12
-Mcu.Pin21=PB8-BOOT0
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_SYS_VS_DBSignals
-Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_SYS_VS_DBSignals
+Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA2
@@ -110,15 +77,14 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=26
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -143,7 +109,7 @@ PA14.GPIO_Label=T_SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.Mode=Half_Duplex_Slave
+PA15.Mode=Half_Duplex_Master
 PA15.Signal=I2S3_WS
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=LPUART1_TX [STLINKV3E_VCP_RX]
@@ -171,12 +137,6 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=ShiftRegData
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB12.Mode=Half_Duplex_Master
-PB12.Signal=I2S2_WS
-PB13.Mode=Half_Duplex_Master
-PB13.Signal=I2S2_CK
-PB15.Mode=Half_Duplex_Master
-PB15.Signal=I2S2_SD
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=ShiftRegEn
 PB2.Locked=true
@@ -187,9 +147,9 @@ PB8-BOOT0.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC10.Mode=Half_Duplex_Slave
+PC10.Mode=Half_Duplex_Master
 PC10.Signal=I2S3_CK
-PC12.Mode=Half_Duplex_Slave
+PC12.Mode=Half_Duplex_Master
 PC12.Signal=I2S3_SD
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 [blue push button]
@@ -238,7 +198,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_I2S3_Init-I2S3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S3_Init-I2S3-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
