--- a/SEAG_F/SEAG_F.ioc
+++ b/SEAG_F/SEAG_F.ioc
@@ -33,8 +33,9 @@ I2S1.AudioFreq=I2S_AUDIOFREQ_44K
 I2S1.DataFormat=I2S_DATAFORMAT_24B
 I2S1.ErrorAudioFreq=-5.3 %
 I2S1.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S1.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq
+I2S1.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq,Mode
 I2S1.Instance=SPI$Index
+I2S1.Mode=I2S_MODE_MASTER_TX
 I2S1.RealAudioFreq=41.666 KHz
 I2S1.VirtualMode=I2S_MODE_MASTER
 I2S2.AudioFreq=I2S_AUDIOFREQ_44K
@@ -101,6 +102,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -189,9 +191,8 @@ PC3.Locked=true
 PC3.Signal=GPIO_Output
 PC4.Mode=Master_Clock_Activated
 PC4.Signal=I2S1_MCK
-PC6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=RotEncoderInA
-PC6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC6.Locked=true
 PC6.Signal=GPXTI6
 PC7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -201,7 +202,7 @@ PC7.Locked=true
 PC7.Signal=GPXTI7
 PC8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC8.GPIO_Label=RotEncoderButton
-PC8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PC8.Locked=true
 PC8.Signal=GPXTI8
 PH0-OSC_IN.Mode=HSE-External-Oscillator
@@ -239,7 +240,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2S1_Init-I2S1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2S1_Init-I2S1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
