Sent 0 to right channel in process buffer. Set index 0 of selected filter with toggle (not tested)

--- a/SEAG_F/SEAG_F.ioc
+++ b/SEAG_F/SEAG_F.ioc
@@ -115,7 +115,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=ToggleInput3
 PA10.Locked=true
-PA10.Signal=GPIO_Input
+PA10.Signal=GPXTI10
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=ToggleInput2
 PA11.Locked=true
@@ -291,6 +291,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=192000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
